<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">OTP-android</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="registry">Registrar</string>
    <string name="secret">Generar OTP</string>
    <string name="title">OTP Generator</string>
    <string name="user_name">Nombre del usuario</string>
    <string name="text">Secret code:</string>
    <string name="password">Password</string>
    <string name="counter">Counter</string>
    
</resources>